examples/negative/parse_errors/L1/reserved_of.ob
MODULE Reserved;

VAR OF: INTEGER;

END Reserved.
